# oom_adj_daemon

./: Makefile  config_parser.hxx  configure.ac  exec-notify.c  exec-notify.cxx  list_oom_adj.py  oom_adj.conf.sample
src/: Makefile.am  config_parser.hxx  main.cxx  rule.hxx  rule_group.hxx  rule_user.hxx
